# weaveBI-pythoon-

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  main.py  pyproject.toml
.github/: deploy.yml
.github/workflows/: deploy.yml  deploy.yml.bak
alembic/: env.py
alembic/versions/: 42cabdd4a61e_init.py  be8cb7331afb_idk.py
auth/: deps.py  jwt_handler.py
config/: app_config.py  db_config.py  jwt_config.py  llm_config.py  log_config.py  mail_config.py  prompt_config.py
controllers/: dashboards.py  databases.py  queries.py  users.py
database/: database.py
guardrails/: config.yml  prompt.yml
models/: __init__.py  dashboards.py  databases.py  models.py  queries.py  tags.py  users.py
prompts/: prompts.yaml
routes/: dashboards.py  databases.py  queries.py  users.py
schemas/: dashboards.py  databases.py  generic_response_models.py  queries.py  users.py
services/: dashboards.py  databases.py  queries.py  users.py
utils/: logger.py  user_queries.py
